<resources>
    <string name="app_name">ResepKu</string>

    <string name="menu_home">Home</string>
    <string name="menu_search">Search</string>
    <string name="menu_favorit">Favorit</string>

    <string name="msg_load_failed">Gagal memuat data</string>
    <string name="msg_empty_recipe">Belum ada resep</string>
    <string name="msg_empty_search">Resep tidak ditemukan</string>
    <string name="msg_empty_favorite">Belum ada favorit</string>

    <string name="action_retry">Coba lagi</string>
    <string name="action_back">Kembali</string>

    <string name="hint_search">Cari resep…</string>

    <string name="action_favorite_add">Tambah ke favorit</string>
    <string name="action_favorite_remove">Hapus dari favorit</string>

    <string name="desc_gambar_resep">Gambar resep</string>
    <string name="desc_gambar_resep_format">Gambar %1$s</string>

    <string name="label_bahan">Bahan-Bahan</string>
    <string name="label_langkah">Langkah Memasak</string>
    <string name="desc_tombol_favorit">Tombol favorit</string>

    <string name="msg_favorit_ditambah">Ditambahkan ke favorit</string>
    <string name="msg_favorit_dihapus">Dihapus dari favorit</string>

    <string name="label_favorit">Favorit</string>
    <string name="label_batal_favorit">Batal Favorit</string>
</resources>
